# SAR

./: .gitignore  CHANGELOG.md  README.md  check.yml  current_kernel.json  pyproject.toml  requirements.txt
SAR/: __main__.py  config.py  sendmail.py
src/SAR/: __main__.py  check.py  config.py  sendmail.py
